Fixed issue with the Navbar overlapping the page heading when the cooking banner is active

--- a/components/shared/components/Navbar/Navbar.module.scss
+++ b/components/shared/components/Navbar/Navbar.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
   transition: padding 200ms ease-in-out;
-  padding: 40px 0;
+  padding: 20px 0;
 }
 
 .navbar ul {
